--- a/package.json
+++ b/package.json
@@ -1,20 +1,21 @@
 {
   "name": "vue-ele-form-image-uploader",
   "description": "vue-ele-form 的图片上传组件",
-  "version": "0.1.4",
+  "version": "0.1.5",
   "private": false,
   "scripts": {
+    "build": "vue-cli-service build",
+    "build:lib": "vue-cli-service build --target lib --name vue-ele-form-image-uploader --dest ./dist/ ./lib/index.js",
     "serve": "vue-cli-service serve",
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
-    "vue-ele-upload-image": "^2.0.8"
-  },
-  "repository": {
+    "vue-ele-upload-image": "^2.0.9"
+  }, "repository": {
     "type": "git",
     "url": "https://github.com/dream2023/vue-ele-form-image-uploader"
   },
-  "main": "lib/index.js",
+  "main": "dist/vue-ele-form-image-uploader.umd.min.js",
   "homepage": "https://github.com/dream2023/vue-ele-form-image-uploader",
   "keywords": [
     "vue-ele-form",
